# pinentry-rofi-rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs  pinentry.rs
